# Nuvom

./: .gitignore  .netlify.toml  .nuvom_plugins.toml  .nuvomignore  404.html  CONTRIBUTING.md  README.md  index.html  jobs.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run.py  sitemap.xml  test_jobs.py
.github/workflows/: docs.yml  release.yml  static.yml
architecture/: index.html
cli/: index.html
concepts/: index.html
configuration/: index.html
contributing/: index.html
docs/: architecture.md  cli.md  concepts.md  configuration.md  contributing.md  faq.md  index.md  plugins.md  quickstart.md  roadmap.md  scheduler.md
faq/: index.html
nuvom/: __init__.py  __version__.py  cli.py  config.py  job.py  log.py  queue.py  registry.py  result.py  result_store.py  sdk.py  serialization.py  serialize.py  serializer.py  task.py  watcher.py  worker.py
nuvom-hello-plugin/: README.md  setup.cfg
nuvom-hello-plugin/nuvom_hello_plugin/: plugin.py
nuvom/cli/: cli.py
nuvom/discovery/: compute_path.py  discover_tasks.py  filters.py  loader.py  manifest.py  parser.py  reference.py  static_scanner.py  walker.py
nuvom/execution/: job_runner.py
nuvom/internal/: manifest.py
nuvom/plugins/: contracts.py  loader.py  registry.py
nuvom/policies/: retry.py
nuvom/queue_backends/: base.py  file_queue.py  memory_queue.py  sqlite_queue.py
nuvom/registry/: auto_register.py  registry.py
plugins/: index.html
quickstart/: index.html
roadmap/: index.html
scheduler/: index.html
search/: search_index.json
site/: index.html  sitemap.xml
tasks/: execute_jobs.py  jobs.py
tests/: conftest.py  test_cli_status.py  test_concurrency_stress_file.py  test_concurrency_stress_memory.py  test_file_backend.py  test_hooks.py  test_job_serialization.py  test_memory_backend.py  test_plugins.py  test_queue_file_backend.py  test_queue_memory_backend.py  test_queue_serialization.py  test_queue_sqlite_backend.py  test_result_file_backend.py  test_result_memory_backend.py  test_result_sqlite_backend.py  test_retry_delay.py  test_sdk.py  test_timeout_policy.py  test_utils.py  test_worker.py  test_worker_flow.py
(+48 files in other folders)
