[project]
name = "nuvom"
version = "0.10"
description = "A Fast, Windows-First Task Queue for Python. Simple, Reliable, and Cross-Platform."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"

authors = [
  { name = "Nahom", email = "nahiyo86@gmail.com" }
]

dependencies = [
  "rich>=13.0.0",
  "pydantic-settings>=2.9.1",
  "pydantic>=2.0.0",
  "typer>=0.7.0",
  "python-dotenv>=1.1.0",
  "msgpack>=1.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/nahom-zewdu/Nuvom"
"Repository" = "https://github.com/nahom-zewdu/Nuvom"

[project.scripts]
nuvom = "nuvom.cli.cli:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["nuvom"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-git-revision-date-localized-plugin",
  "prometheus_client"
] 

[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve"
build = "mkdocs build"
deploy = "mkdocs gh-deploy --clean"